# digital-signage

./: .gitignore  .htmlvalidate.json  .prettierrc  README.md  dprint.json  justfile  package-lock.json  package.json  tox.ini
.github/workflows/: backend.yml  (+2 more)
backend/: README.md  pyproject.toml  tox.ini
backend/src/server/: User.py  api.py  config_view.py  database.py  department.py  department_info.py  display.py  display_group.py  display_view.py  free_form_content.py  grouped_content_streams.py  index.py  loadshedding.py  login.py  main.py  registration.py  user.py  util.py  valid_redirect.py
backend/src/server/department/: __init__.py  department.py  file.py  lecturer.py  person.py
backend/src/server/display/: __init__.py  display.py
backend/src/server/display/template/: __init__.py  page_template.py  template_properties.py  template_property.py  template_property_group.py
backend/src/server/display_group/: __init__.py  display_group.py  template.py  template_property.py
backend/src/server/display_group/template/: page_template.py  template_properties.py  template_property_group.py
backend/src/server/free_form_content/: __init__.py  binary_content.py  caption.py  captioned_content.py  content_factory.py  content_stream.py  free_form_content.py  iframe.py  link.py  local_image.py  local_video.py  qrcode_content.py  remote_image.py  text.py
backend/src/server/sql/: add_default_data.sql  drop_tables.sql  schema.sql
backend/test/: conftest.py  test_database.py  test_http.py  test_main.py
frontend/: campusign.test.db-journal  index.html  index.js
(+134 files in other folders)
