[project]
name = "campusign_server"
version = "0.1.0"
description = "My package description"

authors = [
  { name = "Cael Marquard", email = "mrqcae001@myuct.ac.za" },
  { name = "Dylan Loram", email = "lrmdyl001@myuct.ac.za" },
  { name = "Jack Johnson", email = "jhnjac012@myuct.ac.za" },
]

readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "Flask~=2.3.2",
  "pillow~=10.0.0",
  "python-dotenv~=1.0.0",
]

[project.optional-dependencies]
test = [
  "black~=23.7",
  "flake8~=6.1",
  "pep8-naming~=0.13",
  "pytest~=7.4",
  "flask-login~=0.6.2",
]
